@@ -1,3 +1,9 @@
+2002-04-09  Shivram U  <shivaram.upadhyayula@wipro.com>
+
+	* src/gtkhex.c (get_max_char_width): Only displayable characters are
+	used for calculating max char width. Fixes the pango warnings 
+	generated when opening a file (Bug #76294)
+
 2002-04-29  Shivram U  <shivaram.upadhyayula@wipro.com>
 
 	* src/ui.c, src/converter.c: Fixed problem with disabling and enabling
